<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.admin.androidproject1.MainActivity"
    tools:showIn="@layout/activity_main"
    android:gravity="center"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/darkPurpleColor"
        android:textSize="@dimen/titleSize"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/answerOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answerOutText"
        android:textSize="@dimen/defaultTextSize"
        android:layout_below="@+id/toBase"
        android:textColor="@color/darkPurpleColor"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/defaultPadding"
        />

    <EditText
        android:id="@+id/prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/promptHint"
        android:textColorHint="@color/lightPurpleColor"
        android:layout_below="@+id/title"
        android:layout_marginTop="@dimen/defaultPadding"
        android:textSize="@dimen/defaultTextSize"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/fromBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fromBaseHint"
        android:textColorHint="@color/lightPurpleColor"
        android:layout_below="@+id/prompt"
        android:layout_marginTop="@dimen/defaultPadding"
        android:textSize="@dimen/defaultTextSize"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/toBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/toBaseHint"
        android:textColorHint="@color/lightPurpleColor"
        android:layout_below="@+id/fromBase"
        android:layout_marginTop="@dimen/defaultPadding"
        android:textSize="@dimen/defaultTextSize"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/answerOut"
        android:text="@string/buttonText"
        android:textColor="@color/ButtonTextColor"
        android:background="@color/darkPurpleColor"
        android:textSize="@dimen/defaultTextSize"
        android:onClick="buttonOnClick"
        android:layout_marginTop="@dimen/defaultPadding"/>



</RelativeLayout>
